--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,23 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+
+li{
+  list-style: none;
+}
+
+.list-points-animal, .list-points-products, .list-points-technologies{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.item h2{
+  margin-left: 40px;
+}
+
+.list-points-animal li, .list-points-products li, .list-points-technologies li{
+  padding: 8px 16px;
+  width: 340px;
+  border: 1px solid black;
+}
