--- a/css/common.css
+++ b/css/common.css
@@ -52,3 +52,15 @@ li{
   width: 360px;
   height: 300px;
 }
+
+#name-input{
+  width: 360px;
+  height: 40px;
+  margin-bottom: 16px;
+  padding: 8px 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
