--- a/css/common.css
+++ b/css/common.css
@@ -64,3 +64,43 @@ li{
   letter-spacing: 0.04em;
   color: #2e2f42;
 }
+
+label, input {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+label{
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+input{
+  width: 360px;
+  height: 40px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.login-form button{
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 86px;
+  height: 40px;
+  background: #4e75ff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  border: none;
+  margin-top: 16px;
+  cursor: pointer;
+}
